kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypod-deployment
  labels:
    app: nginx
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      run: web-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        run: web-server
    spec:
      nodeSelector:
        homework: "true"
      serviceAccountName: monitoring
      volumes:
      - name: shared-volume
        persistentVolumeClaim:
          claimName: homework-my-pvc
      - name: homework-my-configmap
        configMap:
          name: homework-my-configmap
          items:
            - key: nginx_conf
              path: nginx.conf
            - key: index_html
              path: index.html
      containers:
        - name: web-server
          image: nginx:alpine
          ports:
            - containerPort: 8000
          readinessProbe:
            exec:
              command: ["test", "-f", "/homework/index.html"]
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: shared-volume
              mountPath: /homework
            - name: homework-my-configmap
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: homework-my-configmap
              mountPath: /homework/conf/file/index.html
              subPath: index.html
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "rm -f /homework/index.html"]
          resources:
            requests:
              memory: "200Mi"
              cpu: "250m"
            limits:
              memory: "400Mi"
              cpu: "500m"
