kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypod-nginx-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
        - path: /homepage
          pathType: ImplementationSpecific
          backend:
            service:
              name: srv-mypod
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: srv-mypod
              port:
                number: 80
